Implementer hening av vedtaksliste for en person.
Foreløpig støtter løsningen kun ramme- og utbetalingsvedtak
