# mediator/src/main/kotlin/no/nav/dagpenger/vedtak/mediator/api/VedtakForPersonVisitor.kt
@@ -1,8 +1,13 @@
 package no.nav.dagpenger.vedtak.mediator.api
 
+import no.nav.dagpenger.vedtak.api.models.RammeDTO
+import no.nav.dagpenger.vedtak.api.models.UtbetalingDTO
 import no.nav.dagpenger.vedtak.api.models.VedtakDTO
 import no.nav.dagpenger.vedtak.modell.Person
 import no.nav.dagpenger.vedtak.modell.SakId
+import no.nav.dagpenger.vedtak.modell.entitet.Beløp
+import no.nav.dagpenger.vedtak.modell.entitet.Stønadsdager
+import no.nav.dagpenger.vedtak.modell.utbetaling.Utbetalingsdag
 import no.nav.dagpenger.vedtak.modell.vedtak.Vedtak
 import no.nav.dagpenger.vedtak.modell.visitor.PersonVisitor
 import java.time.LocalDate
@@ -10,15 +15,26 @@ import java.time.LocalDateTime
 import java.util.UUID
 
 class VedtakForPersonVisitor(person: Person) : PersonVisitor {
-    private val vedtakListeDto = mutableListOf<VedtakDTO>()
+    private val rammer = mutableListOf<RammeDTO>()
+    private val mutableUtbetalinger = mutableMapOf<UUID, MutableMap<String, Any>>()
 
     init {
         person.accept(this)
     }
 
-    fun vedtakListeDto() = vedtakListeDto.toList()
+    fun vedtakListeDto(): VedtakDTO {
+        val utbetalinger: List<UtbetalingDTO> = mutableUtbetalinger.map {
+            UtbetalingDTO(
+                vedtakId = it.key,
+                fraOgMed = it.value["fraOgMed"] as LocalDate,
+                tilOgMed = it.value["tilOgMed"] as LocalDate,
+                sumUtbetalt = it.value["sumUtbetalt"] as Double,
+            )
+        }
+        return VedtakDTO(rammer = rammer, utbetalinger = utbetalinger)
+    }
 
-    override fun postVisitVedtak(
+    override fun preVisitVedtak(
         vedtakId: UUID,
         sakId: SakId,
         behandlingId: UUID,
@@ -26,8 +42,29 @@ class VedtakForPersonVisitor(person: Person) : PersonVisitor {
         vedtakstidspunkt: LocalDateTime,
         type: Vedtak.VedtakType,
     ) {
-        this.vedtakListeDto.add(
-            VedtakDTO(vedtakId = vedtakId, vedtakType = VedtakDTO.VedtakType.valueOf(type.name)),
-        )
+        if (type == Vedtak.VedtakType.Ramme) {
+            this.rammer.add(RammeDTO(vedtakId = vedtakId, virkningsdato = virkningsdato))
+        }
+
+        if (type == Vedtak.VedtakType.Utbetaling) {
+            val fraOgMed = virkningsdato.minusDays(13)
+            val tilOgMed = virkningsdato
+
+            mutableUtbetalinger[vedtakId] = mutableMapOf("fraOgMed" to fraOgMed, "tilOgMed" to tilOgMed)
+        }
+    }
+
+    override fun visitUtbetalingsvedtak(
+        vedtakId: UUID,
+        utfall: Boolean,
+        forbruk: Stønadsdager,
+        beløpTilUtbetaling: Beløp,
+        utbetalingsdager: List<Utbetalingsdag>,
+    ) {
+        this.mutableUtbetalinger.map { (key, value) ->
+            if (key == vedtakId) {
+                value["sumUtbetalt"] = beløpTilUtbetaling.reflection { it }.toDouble()
+            }
+        }
     }
 }
